[package]
name = "ruff_api"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ruff_api"
crate-type = ["cdylib"]

[dependencies]
ruff = { git = "https://github.com/JonathanPlasse/ruff.git", branch = "ruff-api" }
ruff_diagnostics = { git = "https://github.com/JonathanPlasse/ruff.git", branch = "ruff-api" }
pyo3 = "0.18.1"
